// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render card component (no props passed) 1`] = `
<div
  className="card "
>
  <div>
    ha ha business
  </div>
</div>
`;

exports[`should render card component with subtitle 1`] = `
<div
  className="card "
>
  <p
    className="card__subtitle"
  >
    sample subtitle
  </p>
  <div>
    ha ha business
  </div>
</div>
`;

exports[`should render card component with title 1`] = `
<div
  className="card "
>
  <h1
    className="card__title"
  >
    sample title
  </h1>
  <div>
    ha ha business
  </div>
</div>
`;
